@@ -7,9 +7,9 @@ files[] = xmlrpc_server.module
 dependencies[] = services
 
 core = 7.x
-; Information added by Drupal.org packaging script on 2016-08-01
-version = "7.x-3.16"
+; Information added by Drupal.org packaging script on 2016-08-22
+version = "7.x-3.17"
 core = "7.x"
 project = "services"
-datestamp = "1470071341"
+datestamp = "1471899241"
 
