@@ -3,11 +3,13 @@ description = The basic Subscriptions framework.
 package = "Subscriptions"
 core = 7.x
 
+files[] = tests/subscriptions.test
+
 configure = admin/config/system/subscriptions
 
-; Information added by Drupal.org packaging script on 2016-05-25
-version = "7.x-1.2"
+; Information added by Drupal.org packaging script on 2016-08-22
+version = "7.x-1.3"
 core = "7.x"
 project = "subscriptions"
-datestamp = "1464181817"
+datestamp = "1471906141"
 
