@@ -6,9 +6,9 @@ dependencies[] = subscriptions
 
 core = 7.x
 
-; Information added by Drupal.org packaging script on 2016-05-25
-version = "7.x-1.2"
+; Information added by Drupal.org packaging script on 2016-08-22
+version = "7.x-1.3"
 core = "7.x"
 project = "subscriptions"
-datestamp = "1464181817"
+datestamp = "1471906141"
 
